<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C3335"
    android:padding="8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:background="#333945"
        android:text="@string/default_conversion_rate"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_for_value"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:weightSum="10"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/rupee_symbol"
            android:textColor="#FFF"
            android:textSize="60sp"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/edit_text_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#A4B0BD"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:background="#535C68"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_for_value">

        <Button
            android:id="@+id/euro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="#2f363f"
            android:text="@string/euro_symbol"
            android:textColor="#7B8788"
            android:textSize="48sp" />

        <Button
            android:id="@+id/usDollar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="#2f363f"
            android:text="@string/dollar_symbol"
            android:textColor="#7B8788"
            android:textSize="48sp" />

        <Button
            android:id="@+id/pound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="#2f363f"
            android:text="@string/pound_symbol"
            android:textColor="#7B8788"
            android:textSize="48sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:background="#535C68"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <Button
            android:id="@+id/dirham"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="#2f363f"
            android:text="@string/dirham_symbol"
            android:textColor="#7B8788"
            android:textSize="48sp" />

        <Button
            android:id="@+id/japaneseYen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="#2f363f"
            android:text="@string/Japaneseyen_symbol"
            android:textColor="#7B8788"
            android:textSize="48sp" />

        <Button
            android:id="@+id/bitcoin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="#2f363f"
            android:text="@string/bitcoin_symbol"
            android:textColor="#7B8788"
            android:textSize="48sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:background="#535C68"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/russianRuble"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="#2f363f"
            android:text="@string/russian_ruble_symbol"
            android:textColor="#7B8788"
            android:textSize="48sp" />

        <Button
            android:id="@+id/canadianDollar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="#2f363f"
            android:text="@string/canadian_dollar_symbol"
            android:textColor="#7B8788"
            android:textSize="48sp" />

        <Button
            android:id="@+id/ethereum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="#2f363f"
            android:text="@string/ethereum_symbol"
            android:textColor="#7B8788"
            android:textSize="48sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>